--- a/packages/theme-chalk/src/button.scss
+++ b/packages/theme-chalk/src/button.scss
@@ -7,23 +7,26 @@
   cursor: pointer;
   outline: none;
   border: #fafafa;
-  border-radius: 5px;
+  border-radius: 4px;
   user-select: none;
-  min-height: 40px;
+  height: 40px;
   line-height: 1;
   vertical-align: middle;
-  padding: 0 20px;
+  padding: 0 24px;
 
   @include m(medium) {
-    padding: 0 20px;
+    height: 32px;
+    padding: 0 16px;
   }
 
   @include m(small) {
-    padding: 0 18px;
+    height: 24px;
+    padding: 0 8px;
   }
 
   @include m(large) {
-    padding: 0 25px;
+    height: 44px;
+    padding: 0 24px;
   }
 
   @include when(disabled) {
